# svitch

./: .gitignore  README.md  docker-compose.yml  svitch_project_plan.md
.github/workflows/: ci.yml  publish.yml  test.yml
agent-tracer/: server.py
agent-tracer/svitch_tracer/: __init__.py  tracer.py
agent-tracer/svitch_tracer/integrations/: langgraph.py
agent-tracer/svitch_tracer/storage/: db.py
agent-tracer/tests/: test_tracer.py
compliance-engine/: render_html.py  server.py  test_reports.py
compliance-engine/report_gen/: __init__.py  base.py  dpdp_dpia.py  rbi_free.py
consent-ledger/: ledger.py  server.py  vercel.json
consent-ledger/chaincode/: package.json  tsconfig.json
consent-ledger/chaincode/src/: consent.ts
consent-ledger/client/: fabric_client.py
consent-ledger/tests/: test_ledger.py
pii-shield/service/: main.py  models.py  test_detectors.py
pii-shield/service/detectors/: __init__.py  common.py  india.py
private-enclave/: docker-compose.yml  test_enclave.py
private-enclave/inference/: Dockerfile  server.py
private-enclave/provisioner/: provision.py
private-enclave/wireguard/: gen_config.py
sdk/node/: package-lock.json  package.json  tsconfig.json
sdk/node/src/: index.ts  patterns.ts
sdk/python/: README.md  pyproject.toml
sdk/python/svitch/: __init__.py  shield.py  wrap.py
web/: middleware.ts  proxy.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/redact/: route.ts
web/app/dashboard/: Sidebar.tsx  layout.tsx  page.tsx
web/app/dashboard/agents/: page.tsx
web/app/dashboard/consent/: page.tsx
(+4 files in other folders)
