[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svitch"
version = "0.1.0"
description = "AI data security layer — detect and redact Indian and global PII from LLM prompts."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["pii", "dpdp", "llm", "security", "india", "compliance", "aadhaar", "pan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
all = ["openai>=1.0.0", "anthropic>=0.25.0"]

[project.urls]
Homepage = "https://github.com/svitch-ai/svitch"
Repository = "https://github.com/svitch-ai/svitch"
Issues = "https://github.com/svitch-ai/svitch/issues"

[tool.hatch.build.targets.wheel]
packages = ["svitch"]
